Adds 'since' API to give historical price data in JSON format. Adds nginx config for serving static js files. Adds 'graph' end-point to display a graph of the last 2 days of BTC prices.

--- a/bitcoin-uwsgi.conf
+++ b/bitcoin-uwsgi.conf
@@ -14,3 +14,8 @@ location ~ ^/bitcoin/static/css/[^/]*\.css$ {             # Matches for css file
 
     root /home/ubuntu/public_html/uwsgi;
 }
+
+location ~ ^/bitcoin/static/js/[^/]*\.js$ {        # Matches for static js files in the static/js folder.
+
+    root /home/ubuntu/public_html/uwsgi;
+}
