Adds an api module to keep all the api end-points together. Changes uwsgi settings to include a pythonpath to correctly import modules. Adds js function to update the header.

--- a/bitcoin-uwsgi.ini
+++ b/bitcoin-uwsgi.ini
@@ -2,6 +2,8 @@
 socket      = /tmp/uwsgi.sock 
 plugin      = python
 wsgi-file   = /home/ubuntu/public_html/uwsgi/bitcoin/app.py
+; We specify the python path to make the relative imports work
+pythonpath  = /home/ubuntu/public_html/uwsgi
 ; We specify the app.py as the one that triggers uwsgi to reload when the file is changed.
 touch-reload= /home/ubuntu/public_html/uwsgi/bitcoin/app.py
 uid         = www-data
