--- a/config/bitcoin-uwsgi.ini
+++ b/config/bitcoin-uwsgi.ini
@@ -1,10 +1,14 @@
 [uwsgi]
 socket          = /home/abid/www/bitcoin/uwsgi.sock
-plugin          = python
+; Since we are installing uwsgi using pip inside a virtualenv we don't need to specify python as a plugin
+;plugin          = python
 wsgi-file       = /home/abid/www/bitcoin/uwsgi/app.py
 ; we specify the python path to make the relative imports work
 pythonpath      = /home/abid/www/bitcoin/uwsgi
+virtualenv      = /home/abid/www/bitcoin/venv
 ; we specify app.py as the one that triggers uwsgi to reload when the file is changed
 touch-reload    = /home/abid/www/bitcoin/uwsgi/app.py
 uid             = abid
 gid             = abid
+pidfile         = /home/abid/www/bitcoin/uwsgi.pid
+daemonize       = /home/abid/www/bitcoin/uwsgi.log
