Add rules for serving static css and js files

--- a/config/bitcoin-nginx.conf
+++ b/config/bitcoin-nginx.conf
@@ -4,3 +4,13 @@ location /bitcoin/ {
     include uwsgi_params;
     uwsgi_pass unix:///home/abid/www/bitcoin/uwsgi.sock;        # uwsgi is communicating via a UNIX socket
 }
+
+location ~ ^/bitcoin/static/css/[^/]*\.css$ {             # Matches for css files in the static/css folder serving the content statically.
+
+    root /home/abid/www;
+}
+
+location ~ ^/bitcoin/static/js/[^/]*\.js$ {        # Matches for static js files in the static/js folder.
+
+    root /home/abid/www;
+}
