--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -8,7 +8,7 @@ error_log /home/abid/.config/nginx/error.log info;
 pid /dev/null;
 events { worker_connections 128; }
 http {
-        #include mimes.conf; #for custom file types
+        include mimes.conf;     # for custom file types
         default_type application/octet-stream;
         access_log /home/abid/.config/nginx/access.log combined;
 
