--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@
 
 # Ignore the .sync files required for 'make'
 .sync/
+
+# Ignore the secrets.py where we store confidential information
+secrets.py
